refactor: Add new ThirdPartySerialPublication