@@ -1,26 +1,24 @@
 package no.sikt.nva.pubchannels.handler.search;
 
 import static com.google.common.net.MediaType.JSON_UTF_8;
+
 import static no.sikt.nva.pubchannels.handler.validator.Validator.validatePagination;
 import static no.sikt.nva.pubchannels.handler.validator.Validator.validateString;
 import static no.sikt.nva.pubchannels.handler.validator.Validator.validateYear;
+
 import static nva.commons.apigateway.MediaTypes.APPLICATION_JSON_LD;
 import static nva.commons.core.attempt.Try.attempt;
 import static nva.commons.core.paths.UriWrapper.HTTPS;
+
 import com.amazonaws.services.lambda.runtime.Context;
 import com.google.common.net.MediaType;
-import java.net.HttpURLConnection;
-import java.net.URI;
-import java.time.Year;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+
 import no.sikt.nva.pubchannels.channelregistry.ChannelRegistryClient;
 import no.sikt.nva.pubchannels.channelregistry.ChannelType;
 import no.sikt.nva.pubchannels.handler.PublicationChannelClient;
 import no.sikt.nva.pubchannels.handler.ThirdPartyPublicationChannel;
 import no.unit.nva.commons.pagination.PaginatedSearchResult;
+
 import nva.commons.apigateway.ApiGatewayHandler;
 import nva.commons.apigateway.RequestInfo;
 import nva.commons.apigateway.exceptions.ApiGatewayException;
@@ -28,7 +26,15 @@ import nva.commons.apigateway.exceptions.BadRequestException;
 import nva.commons.core.Environment;
 import nva.commons.core.JacocoGenerated;
 import nva.commons.core.paths.UriWrapper;
+
 import org.apache.commons.validator.routines.ISSNValidator;
+
+import java.net.HttpURLConnection;
+import java.net.URI;
+import java.time.Year;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 public abstract class SearchByQueryHandler<T> extends ApiGatewayHandler<Void, PaginatedSearchResult<T>> {
 
@@ -128,11 +134,9 @@ public abstract class SearchByQueryHandler<T> extends ApiGatewayHandler<Void, Pa
     }
 
     private List<T> getHits(URI baseUri, ThirdPartySearchResponse searchResult, String requestedYear) {
-        return searchResult.resultSet()
-                   .pageResult()
-                   .stream()
-                   .map(result -> createResult(baseUri, result, requestedYear))
-                   .collect(Collectors.toList());
+        return searchResult.resultSet().pageResult().stream()
+                .map(result -> createResult(baseUri, result, requestedYear))
+                .toList();
     }
 
     private Map<String, String> getQueryParams(SearchParameters parameters) {
